--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Cheese by alaska113</title>
+    <title>Cesium Web Visualization Demo</title>
   </head>
 
   <body>
@@ -19,8 +19,7 @@
         <h2></h2>
 
         <section id="downloads">
-          <a href="https://github.com/alaska113/cheese/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/alaska113/cheese/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/alaska113/cheese/zipball/master" class="btn">View Demo</a>
           <a href="https://github.com/alaska113/cheese" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
