--- a/index.html
+++ b/index.html
@@ -15,19 +15,35 @@
 
     <header>
       <div class="container">
-        <h1>Cheese</h1>
-        <h2></h2>
+        <h1>Cesium Web Visualization Demo</h1>
+        <h2>Historical imagery and change detection</h2>
 
         <section id="downloads">
-          <a href="https://github.com/alaska113/cheese/zipball/master" class="btn">View Demo</a>
-          <a href="https://github.com/alaska113/cheese" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="https://ak-nsf-epscor.github.io/ace-cesium-demo/Cesium/Apps/HelloWorld.html" class="btn">View Demo</a>
+          <a href="https://ak-nsf-epscor.github.io/ace-cesium-demo/" class="btn btn-github"><span class="icon"></span>View Source GitHub</a>
         </section>
       </div>
     </header>
 
     <div class="container">
       <section id="main_content">
-        {% markdown 'README.md' %}
+
+<p>This is a demonstration created to explore using the cesium tool kit to do web visualiation of histoircal 
+imagery and lake change detection for the NSF EPSCoR Alaska Adapting to a Changing Environment (EPSCoR ACE) project.</p>
+
+<p>The imagery datasets visualized here are:</p>
+<ul>
+<li>1950's historical imagery by the USGS</li>
+<li>1980's historical Alaska High Altitutde Photogrammitry project imagery</li>
+<li>recent imagery layers for Alaska</li>
+</ul>
+
+<p>Layerd in here is a lake change detection dataset created for the EPSCoR ACE Northern Test Case. Using 
+the historical imagery lakes from the three different eras were mapped to allow lake changes to be detected 
+and better understood.</p>
+
+<p>This Cesium web interface was an exploration by a summer intern, <a href="/alaska113">Khan Howe</a>, into how to use the Cesium toolkit to 
+bring in imagery web services and the lake change datasets done by other summer interns into a web visualizatoin environment.</p>
       </section>
     </div>
 
